actually fixing overflow bug

--- a/styles/Navbar/Nav.module.css
+++ b/styles/Navbar/Nav.module.css
@@ -5,11 +5,11 @@
 	position: sticky;
 	top: 0;
 	z-index: 2;
-	overflow-x: clip;
+	text-align: center;
 }
 
 .navBar {
-	display: flex;
+	display: inline-flex;
 	justify-content: space-between;
 	align-items: center;
 	color: white;
