--- a/styles/Navbar/NavCenter.module.css
+++ b/styles/Navbar/NavCenter.module.css
@@ -2,5 +2,5 @@
 	font-size: 25px;
 	font-weight: 600;
 	text-align: center;
-	margin: 0;
+	display: inline-block;
 }
