--- a/styles/Navbar/NavLeft.module.css
+++ b/styles/Navbar/NavLeft.module.css
@@ -1,5 +1,5 @@
 .navLeft {
-	display: flex;
+	display: inline-block;
 	align-items: center;
 	justify-content: flex-start;
 }
